# Minigui

./: README.md  build.sh  sysroot
app/: Makefile  orb_test
app/inc/: gui_debug.h  gui_memory.h  gui_service.h  orb_strings.h  screen.h  screen_keyboard.h  widget_test.h
app/inc/page/: page.h  page_event.h  page_label.h  page_manager.h  page_mode.h  page_order.h  page_xml.h
app/inc/tools/: page_cli.h  widget_cli.h
app/inc/widget/: aircondision_widget.h  box_widget.h  button_widget.h  gif_decode.h  (+20 more)
app/src/: gui_memory.c  gui_service.c  orb_test.c  screen.c  screen_keyboard.c  start.c
lib_src/: config.sh
lib_src/mgeff/: .gitignore  build.sh  help
lib_src/mgncs/: build.sh  help  mgncsconfig.h.in~
lib_src/mgplus/: .gitignore  build.sh  help
lib_src/mgutils/: .gitignore  build.sh  help
lib_src/minigui/: .gitignore  build.sh  help  mgconfig.h.in~
lib_src/mspider-2.2.0/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  build.sh  config.status  configure  configure.in  libtool  mgdconfig.h  mgdconfig.h.in  stamp-h1
lib_src/mspider-2.2.0/flash/: Makefile  Makefile.am  Makefile.in  adpcm.cc  adpcm.h  bitmap.cc  bitmap.h  button.cc  character.cc  character.h  cxform.cc  displaylist.cc  flash.cc  flash.h  font.cc  graphic.cc  graphic.h  matrix.cc  movie.cc  movie.h  program.cc  program.h  rawplayer.cc  rawplayer.h  script.cc  script.h  shape.cc  sound.cc  sound.h  sprite.cc  swf.h  text.cc
lib_src/mspider-2.2.0/glib/: Makefile  Makefile.am  Makefile.in  galloca.h  garray.c  garray.h  gasyncqueue.h  gbacktrace.c  gbacktrace.h  gboxed.h  gbsearcharray.c  gbsearcharray.h  gclosure.h  gcompletion.h  gconvert.h  gdate.c  gdate.h  gdebug.h  genums.h  gfileutils.c  gfileutils.h  ghash.c  ghash.h  ghook.h  giochannel.c  giochannel.h  giounix.c  glib-object.h  glib.h  glibconfig.c  glibconfig.h  glibintl.h  glist.c  glist.h  gmain.c  gmain.h  gmarkup.h  gmem.c  gmem.h  gmessages.c  (+45 more)
lib_src/mspider-2.2.0/glib/.deps/: garray.Po  gasyncqueue.Po  gbacktrace.Po  gboxed.Po  gbsearcharray.Po  gcache.Po  gclosure.Po  gcompletion.Po  gdataset.Po  gdate.Po  genums.Po  gerror.Po  gfileutils.Po  ghash.Po  ghook.Po  giochannel.Po  giounix.Po  glibconfig.Po  glist.Po  gmain.Po  gmem.Po  gmessages.Po  gnode.Po  gobject.Po  gobjectnotifyqueue.Po  gparam.Po  gparamspecs.Po  gpattern.Po  gprimes.Po  gqsort.Po  gqueue.Po  grand.Po  grel.Po  gscanner.Po  gsignal.Po  gslist.Po  gsourceclosure.Po  gstrfuncs.Po  gstring.Po  gthread.Po  (+12 more)
lib_src/mspider-2.2.0/include/: Makefile  Makefile.am  Makefile.in  js.h  mspider.h
lib_src/mspider-2.2.0/m4/: Makefile  Makefile.in
lib_src/mspider-2.2.0/mpegsound/: Makefile  Makefile.am  Makefile.in  common.c  interface.c  layer3.c  mpg123.h
lib_src/mspider-2.2.0/src/: Makefile  Makefile.am  Makefile.in  auth.c  auth.h  bitvec.c  bitvec.lo  bmp.c  bmp.lo  browser.h  cache.c  cache.h  cache.lo  capi.c  capi.h  capi.lo  chain.c  chain.h  chain.lo  colors.c  colors.h  colors.lo  cookies.c  cookies.h  cookies.lo  debug.h  dicache.c  dicache.h  dicache.lo  dns.c  dns.h  dns.lo  doc.c  doc.h  doc.lo  dw.c  dw.h  dw.lo  dw_aligned_page.c  dw_aligned_page.h  (+113 more)
lib_src/mspider-2.2.0/src/.deps/: auth.Plo  bitvec.Plo  bmp.Plo  cache.Plo  capi.Plo  chain.Plo  colors.Plo  cookies.Plo  dicache.Plo  dns.Plo  doc.Plo  dw.Plo  dw_aligned_page.Plo  dw_bullet.Plo  dw_button.Plo  dw_container.Plo  dw_ext_iterator.Plo  dw_hruler.Plo  dw_image.Plo  dw_list_item.Plo  dw_marshal.Plo  dw_page.Plo  dw_style.Plo  dw_table.Plo  dw_table_cell.Plo  dw_tooltip.Plo  dw_viewport.Plo  dw_widget.Plo  emspider.Plo  emspider_init.Plo  findtext.Plo  frame.Plo  frameset.Plo  gif.Plo  history.Plo  html.Plo  image.Plo  interface.Plo  jpeg.Plo  klist.Plo  (+13 more)
lib_src/mspider-2.2.0/src/.libs/: libemspider.al  libemspider.la  libnet.al
lib_src/mspider-2.2.0/src/io/: DBIO.c  DBIO.h  Makefile  Makefile.am  Makefile.in  about.c  about.lo  file.c  file.lo  http.c  http.lo  https.c  https.lo  io.c  io.h  io.lo  libio.la  mime.c  mime.h  mime.lo  proto.c  proto.lo  st_io.c  st_io.lo  url_io.c  url_io.h  url_io.lo
lib_src/mspider-2.2.0/src/io/.deps/: DBIO.Plo  about.Plo  file.Plo  http.Plo  https.Plo  io.Plo  mime.Plo  proto.Plo  st_io.Plo  url_io.Plo
lib_src/mspider-2.2.0/src/io/.libs/: libio.al
lib_src/mspider-2.2.0/src/js/: Makefile  Makefile.am  Makefile.in  button.c  checkbox.c  document.c  elements.c  form.c  form.h  forms.c  forms.lo  frames.c  frames.lo  hidden.c  image.c  images.c  images.lo  js.c  js.lo  js_history.c  js_history.lo  jsmisc.c  jsmisc.h  jsmisc.lo  libejs.la  location.c  navigator.c  option.c  option.lo  options.c  password.c  password.lo  radio.c  select.c  spidermonkey.c  spidermonkey.h  spidermonkey.lo  text.c  textarea.c  textarea.lo  (+1 more)
lib_src/mspider-2.2.0/src/js/.deps/: button.Plo  checkbox.Plo  document.Plo  elements.Plo  form.Plo  forms.Plo  frames.Plo  hidden.Plo  image.Plo  images.Plo  js.Plo  js_history.Plo  jsmisc.Plo  location.Plo  navigator.Plo  option.Plo  options.Plo  password.Plo  radio.Plo  select.Plo  spidermonkey.Plo  text.Plo  textarea.Plo  window.Plo
lib_src/mspider-2.2.0/src/js/.libs/: libejs.al  libejs.la
lib_src/mspider-2.2.0/test/: Makefile  Makefile.am  Makefile.in
lib_src/mspider-2.2.0/test/simple/: Makefile  Makefile.am  Makefile.in  emspider-res.h  emspider_example.c  emspider_proxy.c  emspider_stb.c  mspider  mspider_stb  new_toolbar.c  promptbox.c  proxy_box_res.c
lib_src/mspider-2.2.0/test/simple/.deps/: emspider_example.Po  emspider_proxy.Po  emspider_stb.Po  new_toolbar.Po  promptbox.Po  proxy_box_res.Po
libs/lib/: libmgeff-1.2.so.1.0.0  libmgeff.la  libmgplus.la  libmgutils-1.2.so.0.0.0  libmgutils.la  libminigui_ths.la
res/: include.xml  inputbox.xml  main.xml  main11.xml  main2.xml  main33.xml  page.json  page.xml  setting.xml  trackbar.xml  xml说明.txt
res/music/: music_album.xml  music_online_overdue.xml  music_opened_service.xml  music_player.xml  music_playlist.xml  music_prepare_service.xml  music_select_type.xml  music_settings.xml  music_wait_activation.xml
res/xml/: 9gongge.xml  keyboard.xml  main.xml
(+48 files in other folders)
