INCLUDES= -I../mpegsound
INCS = -I../mpegsound -I../zlib
noinst_LTLIBRARIES=libflash.la

libflash_la_SOURCES= adpcm.cc character.cc flash.cc \
		matrix.cc rawplayer.cc sound.cc \
        	bitmap.cc  cxform.cc font.cc movie.cc \
		script.cc  sprite.cc button.cc  displaylist.cc  \
		graphic.cc program.cc shape.cc text.cc \
        adpcm.h \
        bitmap.h \
        button.h \
        character.h \
        cxform.h \
        flash.h \
        font.h \
        graphic.h \
        matrix.h \
        movie.h \
        program.h \
        rawplayer.h \
        rect.h \
        script.h \
        shape.h \
        sound.h \
        sprite.h \
        sqrt.h \
        swf.h \
        text.h \
        displaylist.h 

LIB_NAME= libflash
SRC_FILES=$(libflash_la_SOURCES) 
TOP_DIR=..
