noinst_LIBRARIES=libglib.a

AM_CFLAGS=-I./

libglib_a_SOURCES=	\
	gboxed.h gboxed.c		\
	gclosure.h gclosure.c		\
	genums.h genums.c		\
	gobject.h gobject.c gobjectnotifyqueue.c	\
	gsignal.h gsignal.c		\
	gtype.h gtype.c			\
	gtypemodule.h gtypemodule.c	\
	gtypeplugin.h gtypeplugin.c	\
	gvalue.h gvalue.c		\
	gvaluecollector.h gvaluearray.h gvaluearray.c	\
	gvaluetypes.h gvaluetypes.c gvaluetransform.c	\
	garray.h garray.c		\
	gasyncqueue.h gasyncqueue.c	\
	gbacktrace.h gbacktrace.c	\
	gbsearcharray.h gbsearcharray.c	\
	gcache.h gcache.c		\
	gcompletion.h gcompletion.c	\
	gdataset.h gdataset.c		\
	gdate.h gdate.c         	\
	gerror.h gerror.c		\
	ghash.h ghash.c			\
	ghook.h ghook.c			\
	glist.h	glist.c			\
	gmain.h gmain.c         	\
	gmem.h gmem.c			\
	gmessages.h gmessages.c		\
	gnode.h gnode.c			\
	gpattern.h gpattern.c		\
	gprimes.h gprimes.c		\
	gqsort.h gqsort.c		\
	gqueue.h gqueue.c		\
	grel.h grel.c			\
	grand.h grand.c			\
	gscanner.h gscanner.c		\
	gslist.h gslist.c		\
	gstrfuncs.h gstrfuncs.c		\
	gstring.h gstring.c		\
	gtimer.h gtimer.c		\
	gtree.h gtree.c			\
	gtypes.h gdebug.h glib-object.h	\
	glib.h glibconfig.h galloca.h gmacros.h gquark.h \
	gutils.c gutils.h		\
	gfileutils.c gfileutils.h \
	gsourceclosure.h gsourceclosure.c \
	gparam.h gparam.c \
	gparamspecs.c gparamspecs.h \
	gthread.c gthreadpool.c gthread.h gthreadpool.h	\
	gunicode.h gutf8.c giounix.c  giochannel.c giochannel.h glibconfig.c 

EXTRA_DIST= \
	gmarshal.c gmarshal.h \
	gconvert.h gshell.h gmarkup.h glibintl.h libcharset.h
LIB_NAME = libglib
LIBA = a 
SRC_FILES = $(libglib_a_SOURCES)
TOP_DIR=..
#	libcharset.c 
#	guniprop.c gunibreak.h gunibreak.c gunichartables.h gunicollate.c gunicomp.h
#	gunidecomp.h gunidecomp.c 
#	gconvert.c gconvert.h 
#	gconvert.c gconvert.h gdir.h gdir.c giounix.c giochannel.c giochannel.h	
#	gmarkup.c gmarkup.h
#	gshell.c gshell.h
#	gspawn.h gspawn.c
