noinst_LTLIBRARIES=libio.la

INCS = -I../.. -I../  -I../../glib -I../../include -I${top_builddir}/include
AM_CFLAGS = $(INCS)
libio_la_SOURCES = \
	mime.c \
	mime.h \
	about.c \
	url_io.c \
	url_io.h \
	proto.c	\
	http.c \
	io.c \
	io.h \
	file.c\
	https.c\
	DBIO.h\
	DBIO.c \
	st_io.c
LIB_NAME=libio
SRC_FILES=$(libio_la_SOURCES)
TOP_DIR=../..
