noinst_LTLIBRARIES=libejs.la

TOP_DIR=../..
INCS = -I../ -I../../glib -I${TOP_DIR}/include -I${TOP_DIR}/include/js 
AM_CFLAGS = $(INCS)
libejs_la_SOURCES = js.c \
	spidermonkey.h \
	spidermonkey.c \
	window.c \
	document.c \
	form.c \
	button.c \
    js_history.c \
	select.c \
	options.c \
	option.c \
    location.c \
	text.c \
    elements.c \
	password.c \
	forms.c \
	checkbox.c \
	radio.c \
    hidden.c \
	jsmisc.h \
	jsmisc.c \
	form.h \
	elements.c \
	frames.c \
	navigator.c \
    image.c \
    textarea.c \
    images.c 

LIB_NAME= libejs
SRC_FILES=$(libejs_la_SOURCES) 

